Image detail viewer no longer truncates the image and page URLs fixed. It shows as longer there is screen.

--- a/src/main/webapp/css/newStyle.css
+++ b/src/main/webapp/css/newStyle.css
@@ -1422,6 +1422,44 @@ div.call-to-actions span {
 .middle {
   vertical-align: middle;
 }
+.image-viewer-img-title {
+  font-size: 14px;
+  font-weight: 400;
+}
+.image-viewer-img-src {
+  font-size: 14px;
+  font-weight: 400;
+  text-overflow: ellipsis;
+  overflow: hidden; 
+  white-space: nowrap;
+}
+.image-viewer-img-mime-type-resolution {
+  font-size: 14px;
+  font-weight: 400;
+}
+.image-viewer-img-timestamp {
+  font-size: 14px;
+  font-weight: 400; 
+}
+.image-viewer-page-title{
+  font-size: 14px;
+  font-weight: 400;
+  text-overflow: ellipsis;
+  overflow: hidden; 
+  white-space: nowrap;
+}
+.image-viewer-page-url {
+  font-size: 14px;
+  font-weight: 400;
+  text-overflow: ellipsis;
+  overflow: hidden; 
+  white-space: nowrap;
+}
+.image-viewer-page-timestamp {
+  font-size: 14px;
+  font-weight: 400;
+}
+
 .image-expanded-viewer {
   padding-bottom: 0px !important;
   max-height: 50vh !important;
